General refactor of the plugin + fix some problems found by IntelliJ (old code, unused parts or wrong logic/statement). This commit doesn't break anything since main changes concern code format.

--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -104,7 +104,8 @@
                         </goals>
                         <configuration>
                             <sourceDirectory>${basedir}/src/main/java-templates</sourceDirectory>
-                            <outputDirectory>${project.build.directory}/generated-sources/java-templates</outputDirectory>
+                            <outputDirectory>${project.build.directory}/generated-sources/java-templates
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
