--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>me.leoko.advancedban</groupId>
         <artifactId>AdvancedBan</artifactId>
@@ -35,38 +35,39 @@
             <scope>runtime</scope>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
-                <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.3</version>
                 <configuration>
                     <relocations>
-                    	<relocation>
-                    		<pattern>org.apache.commons</pattern>
-                    		<shadedPattern>${project.groupId}.shaded.org.apache.commons</shadedPattern>
-                    	</relocation>
+                        <relocation>
+                            <pattern>org.apache.commons</pattern>
+                            <shadedPattern>${project.groupId}.shaded.org.apache.commons</shadedPattern>
+                        </relocation>
                         <relocation>
                             <pattern>org.slf4j</pattern>
                             <shadedPattern>${project.groupId}.shaded.org.slf4j</shadedPattern>
                         </relocation>
-                    	<relocation>
-                    		<pattern>com.zaxxer.hikari</pattern>
-                    		<shadedPattern>${project.groupId}.shaded.com.zaxxer.hikari</shadedPattern>
-                    	</relocation>
-                    	<relocation>
-                    		<pattern>org.hsqldb</pattern>
-                    		<shadedPattern>${project.groupId}.shaded.org.hsqldb</shadedPattern>
-                    	</relocation>
+                        <relocation>
+                            <pattern>com.zaxxer.hikari</pattern>
+                            <shadedPattern>${project.groupId}.shaded.com.zaxxer.hikari</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.hsqldb</pattern>
+                            <shadedPattern>${project.groupId}.shaded.org.hsqldb</shadedPattern>
+                        </relocation>
                         <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>${project.groupId}.shaded.org.bstats</shadedPattern>
                         </relocation>
                     </relocations>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                     </transformers>
                 </configuration>
                 <executions>
