--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -14,6 +14,10 @@ MySQL:
   Password: superSecret
   Port: 3306
   Properties: 'verifyServerCertificate=false&useSSL=false&useUnicode=true&characterEncoding=UTF-8'
+  # Don't touch this unless you know you need to change it
+  # If you are getting errors like 'Failed to validate connection (No operations allowed after connection closed.)', this may help
+  # Controls the maximum time, in milliseconds a connection in the pool can stay alive
+  Max-Lifetime: 1800000
 
 # Set to false if you want to have only short messages in the console
 # On startup and on the shutdown.
@@ -26,6 +30,9 @@ LockdownOnError: true
 
 # This will be the default reason to be displayed if none is given
 DefaultReason: "none"
+
+# Change the console identifier when a player gets punished through the console
+ConsoleName: "CONSOLE"
 
 # Change this if your server has a different time that your users.
 # e.g.: ServerTime: 16:43 | Your Time: 13:43 | TimeDiff has to be set to -3
